# PassVault

./: package-lock.json  package.json
src/: index.html  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json  vault.db
src-tauri/src/: main.rs
