[package]
name = "passvault"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = ["shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8.5"
ring = "0.17.8"
hex = "0.4.3"
rusqlite = "0.31.0"
argon2 = "0.6.0-pre.0"
aes-gcm = "0.10.3"
base64 = "0.22.1"
rpassword = "7.3.1"
typenum = "1.17.0"
generic-array = "1.1.0"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
